--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -14,3 +14,8 @@ a {
 .page-item.active .page-link {
     background-color: #057fa5;
 }
+
+.list-group-item.active {
+    background-color: #057fa5;
+    border-color: #057fa5;
+}
