--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -19,3 +19,13 @@ a {
     background-color: #057fa5;
     border-color: #057fa5;
 }
+
+@media (max-width: 576px) {
+    .collapse-sm-down {
+        display: none;
+    }
+
+    .collapse-sm-down.show {
+        display: block;
+    }
+}
