--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -74,3 +74,13 @@ a {
         margin-left: 100%;
     }
 }
+
+/* Navigation bar */
+
+.navbar-light .navbar-nav .nav-link {
+    color: #057fa5;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+    color: #014c8c;
+}
