Add catalog list module

--- a/client/index.style.css
+++ b/client/index.style.css
@@ -133,3 +133,24 @@ dd {
     background-color: #057fa5;
     color: white;
 }
+
+/* Icons size. */
+.material-icons.md-18 {
+    font-size: 18px;
+}
+
+.material-icons.md-24 {
+    font-size: 24px;
+}
+
+.material-icons.md-36 {
+    font-size: 36px;
+}
+
+.material-icons.md-48 {
+    font-size: 48px;
+}
+
+.material-icons.center {
+    vertical-align: middle
+}
