Update dark mode

--- a/profile/nkod/style-mode-dark.css
+++ b/profile/nkod/style-mode-dark.css
@@ -1,18 +1,14 @@
 @media (prefers-color-scheme: dark) {
 
     :root {
-        --color-background: #222;
-        --color-background-footer: #333;
+        --color-background: #111;
+        --color-background-footer: #222;
         --color-border: rgba(255, 255, 255, 0.125);
         --color-text-default: #ddd;
         --color-text-inverted: #222;
-        --color-text-accent: white;
-        --color-text-accent-inverted: white;
+        --color-text-accent: #3bb5dc;
+        --color-text-accent-inverted: #3bb5dc;
         --color-base: #057fa544;
-    }
-
-    nav a, .page-item a.page-link {
-        text-decoration: underline;
     }
 
     .text-muted {
@@ -20,11 +16,12 @@
     }
 
     a:hover, nav a:hover, .page-item.active a.page-link {
-        text-decoration: none;
+        text-decoration: underline;
     }
 
-    a {
-        text-decoration: underline;
+    li.filter-button:hover, li.filter-button:active{
+        background-color: var( --color-text-accent);
+        color: var(--color-text-inverted);
     }
 
     button.navbar-toggler {
@@ -40,7 +37,8 @@
     }
 
     .badge-info {
-        background-color: var(--color-base);
+        border: 1px solid var(--color-text-accent);
+        background-color: var(--color-background-footer);
         color: var(--color-text-default);
     }    
 
