--- a/client/profile-lkod/style.css
+++ b/client/profile-lkod/style.css
@@ -226,6 +226,7 @@ a:hover, nav a:hover, .card-link:hover, .page-item.active a.page-link {
 /* Remove min width from navigation bar. */
 
 .language-drop-down {
+    padding: 0.1rem;
     min-width: 2rem;
     width: 3rem;
     height: 3rem;
