--- a/client/profile-lkod/style.css
+++ b/client/profile-lkod/style.css
@@ -30,9 +30,9 @@ hr, .list-group-item, .card {
 }
 
 .badge-data-service {
-    color: var(--color-text-default) !important;
-    background-color: var(--color-background) !important;
-    border: 1px solid var(--color-data-service) !important;
+    color: var(--color-data-service-text) !important;
+    background-color: var(--color-data-service-background) !important;
+    border: 1px solid var(--color-data-service-border) !important;
 }
 
 .label {
